--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 :root {
+  --clr-accent-500: hsl(12, 60%, 45%);
   --clr-accent-400: hsl(12, 88%, 59%);
   --clr-accent-300: hsl(12, 88%, 75%);
   --clr-accent-100: hsl(12, 100%, 96%);
@@ -229,14 +230,26 @@ body {
   cursor: pointer;
   text-decoration: none;
   border-radius: 100vmax;
-  padding: 1em 2.5em;
+  padding: 1.25em 2.5em;
+  line-height: 1;
   font-weight: var(--fw-bold);
   font-size: var(--fs-button);
   color: var(--clr-neutral-100);
   background-color: var(--clr-accent-400);
+  box-shadow: 0 1.125em 1em -1em var(--clr-accent-500);
 }
 
 .button:hover,
 .button:focus-visible {
   background-color: var(--clr-accent-300);
+}
+
+.button[data-type="inverted"] {
+  background-color: var(--clr-neutral-100);
+  color: var(--clr-accent-400);
+}
+.button[data-type="inverted"]:hover,
+.button[data-type="inverted"]:focus-visible {
+  background-color: var(--clr-neutral-100);
+  color: var(--clr-accent-300);
 }
